# stm32f072x-memory-map

./: .gitignore  Cargo.toml  gen-peripherals.sh
src/: btim.rs  dbgmcu.rs  gpio.rs  gptim.rs  i2c.rs  lib.rs  rcc.rs  spi.rs  usart.rs
