[package]
authors = ["Samuel Dolt <samuel@dolt.ch>"]
name = "stm32f072x-memory-map"
description = "Memory map for STM32F072X microcontrollers"
documentation = "https://docs.rs/stm32f072x-memory-map"
keywords = ["arm", "cortex-m", "cortex-m0", "stm32"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
category = ["embedded", "hardware-support", "memory-management", "no-std"]
repository = "https://github.com/samdolt/stm32f072x-memory-map"

[dependencies]
volatile-register = "0.1.2"
